detail page changes

--- a/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
+++ b/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
@@ -147,7 +147,7 @@ $_swatches_height = (int) $_settings['swatch_height'];
 if($_GET[styles]==22){?>
 
 <script>
-jQuery(document).ready(function(){
+jQuery(window).bind("load", function(){
     jQuery('#swatches_option_value_22').click();
 });
 </script>
