--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -1307,9 +1307,9 @@ left:0;margin:0;padding:0;position:relative;right: 0;top: auto;width:100%;z-inde
 .cate-open-close .slide.m-filter-item-list li.m-selected-ln-item{background-color:#000;color:#fff;border:1px solid #000;}
 .cate-open-close .slide.m-filter-item-list li.m-selected-ln-item a{color:#fff;}
 /*#label_gender,#label_tshirt_color{display:none;}*/
-
 .size_guide_men_image, .size_guide_women_image{max-width:100%;width: 100%;}
 #options-17-list label{box-shadow:3px 3px 5px rgba(170, 170, 170, 0.58);}
+.previous_jump .icon-angle-left::before {content: "...";}
 
 /* RESPONSIVE EXAMPLE */
 .stacktable.large-only{display:table;}
