--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5576,7 +5576,7 @@ line-height:1.2;transform: skewX(30deg);-moz-transform: skewX(30deg);-ms-transfo
 #pdc_design_list tbody td .design-title{padding:5px;}
 #pdc_design_list tbody td .design-preview{padding:5px;}
 #pdc_design_list tbody td .design-preview ul{margin:0;padding:0;}
-.previous_jump .icon-angle-left::before {content: "...";}
+.previous_jump .icon-angle-left::before {content: "...";font-size:12px;}
 #product-options-wrapper dd{margin-bottom:20px;}
 
 @media only screen and (max-width: 1199px) {
