--- a/skin/frontend/creo_mobile/default/style.css
+++ b/skin/frontend/creo_mobile/default/style.css
@@ -1311,9 +1311,9 @@ left:0;margin:0;padding:0;position:relative;right: 0;top: auto;width:100%;z-inde
 #options-17-list label{box-shadow:3px 3px 5px rgba(170, 170, 170, 0.58);}
 .previous_jump .icon-angle-left::before {content: "...";font-size:12px;}
 
-#pdc_design_list tr td.last a:nth-child(1) {
+/*#pdc_design_list tr td.last a:nth-child(1) {
     display: none;
-}
+}*/
 
 /* RESPONSIVE EXAMPLE */
 .stacktable.large-only{display:table;}
