Gender filter on crazy category.

--- a/app/design/frontend/creo/default/template/mana/filters/items/list.phtml
+++ b/app/design/frontend/creo/default/template/mana/filters/items/list.phtml
@@ -19,8 +19,7 @@
 $labels = str_replace(' ', '_',strtolower($this->getFilterOptions()->name));
 $currentUrl = Mage::helper('core/url')->getCurrentUrl();
 ?>
-<div class="cate-open-close label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>">
-
+<div <?php if(strpos($currentUrl,'custom') !== false){ ?> id="onlycrazy"<?php }?> class="cate-open-close label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>">
 <?php 
 if($labels == 'design_category'){
 	if(strpos($currentUrl,'custom') !== false){
@@ -82,8 +81,6 @@ if($labels == 'design_category'){$catName = 'View All';}
 	?>
 	    <a id="label_<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>" class="opener attribure_labels" data-id="<?php echo str_replace(' ', '_',strtolower($this->getFilterOptions()->name)) ?>">
 <?php $catName= $this->getFilterOptions()->name; ?>
-<?php 	if(strpos($currentUrl,'custom') !== false){?>
-<div id="onlycrazyones">
 <?php foreach ($this->getItems() as $_item): ?>
         <?php // MANA BEGIN ?>
         <?php if ($_item->getMSelected()): ?>
@@ -91,19 +88,6 @@ if($labels == 'design_category'){$catName = 'View All';}
         <?php // MANA END ?>
         <?php endif; ?>
 <?php endforeach ?>
-</div>
-<?php
-	}else{	
-?>
-<?php foreach ($this->getItems() as $_item): ?>
-        <?php // MANA BEGIN ?>
-        <?php if ($_item->getMSelected()): ?>
-            <?php $selectedItem = $this->escapeHtml($_item->getLabel()) ?>
-        <?php // MANA END ?>
-        <?php endif; ?>
-<?php endforeach ?>
-<?php    
-	}?>
 <?php
 if($labels == 'design_category'){$catName = 'View All';}
 ?>
