remove back button from category and colection page

--- a/app/design/frontend/creo/default/template/catalog/layer/view.phtml
+++ b/app/design/frontend/creo/default/template/catalog/layer/view.phtml
@@ -31,7 +31,7 @@
  * @see Mage_Catalog_Block_Layer_View
  */
 $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-echo Mage::helper('functions/data')->getListingParentLink($currentUrl);
+//echo Mage::helper('functions/data')->getListingParentLink($currentUrl);
 ?>
 <?php if($this->canShowBlock()): ?>
 <?php /*?><div class="block block-layered-nav<?php if (!$this->getLayer()->getState()->getFilters()): ?> block-layered-nav--no-filters<?php endif; ?>">
