--- a/app/design/frontend/creo/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/men.phtml
@@ -48,7 +48,7 @@ $_attrbiuteCollection = $this->getLoadedAttributeCollection();
 <div class="cate-drop-holder" id="fme_filters_list">
 <?php
 $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
+//echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
 ?>
 <div class="cate-open-close">
 <span class="search-by">Search By Design</span>
