--- a/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
@@ -41,7 +41,7 @@ $_attrbiuteCollection = $this->getLoadedAttributeCollection();
 <div class="category_top_filters cate-links" >
 <?php
 $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
+//echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
 ?>
 <span class="search-by">Search By Design</span>
 <div class="cate-open-close">
