--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -4449,7 +4449,7 @@ textarea {
 	text-transform: uppercase;
 	background: rgba(255, 255, 255, 0.7);
 	color: #000;
-	font:bold 26px/30px "Roboto Condensed", Helvetica, Arial, sans-serif;
+	font:bold 22px/30px "Roboto Condensed", Helvetica, Arial, sans-serif;
 }
 .three-column-category a:hover .category-title{
 	background: #ef4f61;
@@ -5538,6 +5538,50 @@ h3.inline-h span:before{
 	color: #fff;
 }
 .size_guide_men_image, .size_guide_women_image { max-width: 500px; width: 100%;}
+.std > p {
+	margin:0;
+	padding:0;
+	line-height:0;
+}
+
+.cms-page-view .std > p {
+	line-height:inherit;
+	letter-spacing:1px;
+	margin:0 0 1.2em;
+}
+
+.main-container.col3-layout .products-grid .quick-view {
+	top:90%;
+}
+
+.pdp-main-des h5.title {
+	background:none !important;
+	border-bottom:1px solid;
+}
+
+.view-mode {
+	display:none;
+}
+
+.pdc_text_list {
+	max-height:900px !important;
+}
+
+.input-text.required-entry.validate-email.email {
+	box-shadow:none;
+}
+/*#fme_layered_universal_categories a[class*="_selected_"] {background: black !important; color: #fff !important;}*/
+
+.loader-price{
+	height:48px;
+	width:48px;
+	background-image:url('images/opc-ajax-loader.gif'); background-repeat:no-repeat;
+}
+/*#pdc_design_list tr td.last a:nth-child(1) {
+    display: none;
+}*/
+#product-options-wrapper dl.last .char-options label{width:100%;}
+#product-options-wrapper dl.last .char-options {display: inline-block;width: 47%;margin-right: 12px;}
 
 @media only screen and (max-width: 1199px) {
 	#nav ol{font-size: 13px;}
@@ -5690,6 +5734,11 @@ h3.inline-h span:before{
 		display: block;
 		width: auto;
 	}
+#fme_filters_list .cate-open-close .slide li{width:49%;}
+#fme_filters_list .cate-open-close #collection-mega-menu.slide li,
+body.category-tshirt #fme_filters_list .cate-open-close #design_category.slide li,
+body.category-polo #fme_filters_list .cate-open-close #design_category.slide li,
+body.category-clothing #fme_filters_list .cate-open-close #design_category.slide li{text-align:center;}
 }
 @media only screen and (max-width: 767px) {
 	body { min-width: 768px; }
@@ -5698,44 +5747,4 @@ h3.inline-h span:before{
 		margin-top: 0;
 	}
 	.products-grid .mp_quickview_icon {top: 205px !important;}
-}
-
-.std > p {
-	margin:0;
-	padding:0;
-	line-height:0;
-}
-
-.cms-page-view .std > p {
-	line-height:inherit;
-	letter-spacing:1px;
-	margin:0 0 1.2em;
-}
-
-.main-container.col3-layout .products-grid .quick-view {
-	top:90%;
-}
-
-.pdp-main-des h5.title {
-	background:none !important;
-	border-bottom:1px solid;
-}
-
-.view-mode {
-	display:none;
-}
-
-.pdc_text_list {
-	max-height:900px !important;
-}
-
-.input-text.required-entry.validate-email.email {
-	box-shadow:none;
-}
-/*#fme_layered_universal_categories a[class*="_selected_"] {background: black !important; color: #fff !important;}*/
-
-.loader-price{
-	height:48px;
-	width:48px;
-	background-image:url('images/opc-ajax-loader.gif'); background-repeat:no-repeat;
 }
