--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5582,6 +5582,8 @@ h3.inline-h span:before{
 }*/
 #product-options-wrapper dl.last .char-options label{width:100%;}
 #product-options-wrapper dl.last .char-options {display: inline-block;width: 47%;margin-right: 12px;}
+.alert-success .glyphicon{left:0;top:5px;}
+.thumbnail #uploadPhotos img{width:auto;max-width:100%;}
 
 @media only screen and (max-width: 1199px) {
 	#nav ol{font-size: 13px;}
