--- a/app/design/frontend/creo/default/template/pdp/action/uploadPhotos.phtml
+++ b/app/design/frontend/creo/default/template/pdp/action/uploadPhotos.phtml
@@ -2,12 +2,12 @@
 <?php $helper = $this->helper("pdp/upload"); ?>
 <div class="modal fade" id="uploadPhotos" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-md">
-	<div class="modal-content">
-	  <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	<div class="heading-holder"><h3 class="modal-title"><i class="pdc-file-upload"></i> <?php echo $this->__('Upload Files');?> </h3></div>
-	  </div>
-	  <div class="modal-body">
+<div class="modal-content">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+<div class="modal-holder">
+    <div class="modal-header">
+    <div class="heading-holder"><h3 class="modal-title"><i class="pdc-file-upload"></i> <?php echo $this->__('Upload Files');?> </h3></div>
+      </div>
 		<p class="popup-text01"><?php echo $this->__('By uploading an image you guarantee that you have read these <a href="#"> Terms &amp; Conditions</a> of Uploading Photos.<br/>And that you agree to abide by all clauses within these <a hr
 		#>Terms and Conditions</a>.');?></p>
         <!--<div class="upload-info well">
@@ -45,7 +45,6 @@
                 <?php echo $helper->getUploadNote() ?>
             </div> 
             <?php endif; ?>
-        </div>
 		<div class="content_upload nodisplay" pdc-clipart-tab="content_upload">
 			<!--Uploaded Image Here-->
             <?php $customImageInSession = Mage::getSingleton("core/session")->getCustomUploadImages(); ?>
@@ -107,7 +106,7 @@
 	  </div>
 	</div>
 	</div>
-
+        </div>
 <!--New Crop Modal-->
 <div id="crop_modal" class="modal fade" tabindex="1" aria-hidden="true">
     <div class="modal-dialog modal-md">
