--- a/app/design/frontend/creo/default/template/pdp/action/uploadPhotos.phtml
+++ b/app/design/frontend/creo/default/template/pdp/action/uploadPhotos.phtml
@@ -111,11 +111,11 @@
 <div id="crop_modal" class="modal fade" tabindex="1" aria-hidden="true">
     <div class="modal-dialog modal-md">
         <div class="modal-content">
+        <div class="modal-holder">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title"><?php echo $this->__("Crop Area") ?></h4>
           </div>
-          <div class="modal-body">
             <div id="crop_panel">
                 <img id="crop_image" src=""/>
             </div>
