--- a/app/design/frontend/creo/default/template/page/html/header.phtml
+++ b/app/design/frontend/creo/default/template/page/html/header.phtml
@@ -1,211 +1,186 @@
 <?php
 /**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magento.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magento.com for more information.
- *
- * @category    design
- * @package     rwd_default
- * @copyright   Copyright (c) 2006-2015 X.commerce, Inc. (http://www.magento.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
- */
+* Magento
+*
+* NOTICE OF LICENSE
+*
+* This source file is subject to the Academic Free License (AFL 3.0)
+* that is bundled with this package in the file LICENSE_AFL.txt.
+* It is also available through the world-wide-web at this URL:
+* http://opensource.org/licenses/afl-3.0.php
+* If you did not receive a copy of the license and are unable to
+* obtain it through the world-wide-web, please send an email
+* to license@magento.com so we can send you a copy immediately.
+*
+* DISCLAIMER
+*
+* Do not edit or add to this file if you wish to upgrade Magento to newer
+* versions in the future. If you wish to customize Magento for your
+* needs please refer to http://www.magento.com for more information.
+*
+* @category    design
+* @package     rwd_default
+* @copyright   Copyright (c) 2006-2015 X.commerce, Inc. (http://www.magento.com)
+* @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+*/
 /**
- * @var Mage_Page_Block_Html_Header $this
- */
+* @var Mage_Page_Block_Html_Header $this
+*/
 ?>
-
 <script>
 var is_product_details_page = false;
 <?php
 if(Mage::registry('current_product')) {
-		?>
-	is_product_details_page = true;
-	<?php
+?>
+is_product_details_page = true;
+<?php
 }
 ?>
 </script>
 <header id="header" class="row">
 	<img src="<?php echo $this->getSkinUrl('images/header-icons.png', array('_secure'=>true)); ?>" alt="" class="header-icons">
-		<div class="col col-static col-lg-8 col-md-8 col-sm-9 col-xs-9">
-				<div class="sticky-holder">
-						<strong class="logo">
-								<a href="<?php echo Mage::getBaseUrl(); ?>">
-										<?php /* ?><img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" class="large" />
-											<?php */ ?> <img src="<?php echo $this->getLogoSrcSmall() ?>" alt="<?php echo $this->getLogoAlt() ?>" class="small" />
-								</a>
-
-						</strong>
-						<?php echo $this->getChildHtml('topMenu') ?>
-
-				</div>
+	<div class="col col-static col-lg-8 col-md-8 col-sm-9 col-xs-9">
+		<div class="sticky-holder">
+			<strong class="logo">
+			<a href="<?php echo Mage::getBaseUrl(); ?>">
+				<?php /* ?><img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" class="large" />
+				<?php */ ?> <img src="<?php echo $this->getLogoSrcSmall() ?>" alt="<?php echo $this->getLogoAlt() ?>" class="small" />
+			</a>
+			</strong>
+			<?php echo $this->getChildHtml('topMenu') ?>
 		</div>
-		<div class="col right-area col-lg-4 col-md-4 col-sm-3 col-xs-3">
-				<div id="open-close-minicart" class="cart">
-						<a href="javascript:void(0)" class="opener"><span class="count">
-										<?php
-										$_cartQty = Mage::getSingleton('checkout/cart')->getItemsCount();
-										echo $_cartQty;
-										?>
-								</span>My Cart</a>
-						<?php echo $this->getChildHtml('minicart_head'); ?>
-						<!--<div class="slide js-slide-hidden">
-										<div class="product">
-														<a href="#" class="alignleft"><img alt="" src="images/img02.jpg"></a>
-														<div class="text-area">
-																		<h2><a href="#">Velour Blazer With Faux Leather</a></h2>
-																		<span class="price">$149.00</span>
-																		<a class="cancel" href="#"><i class="icon-cancel"></i></a>
-																		<a class="edit" href="#"><i class="icon-edit"></i></a>
-														</div>
-										</div>
-										<div class="product">
-														<a href="#" class="alignleft"><img alt="" src="images/img03.jpg"></a>
-														<div class="text-area">
-																		<h2><a href="#">Velour Blazer With Faux Leather</a></h2>
-																		<span class="price">$149.00</span>
-																		<a class="cancel" href="#"><i class="icon-cancel"></i></a>
-																		<a class="edit" href="#"><i class="icon-edit"></i></a>
-														</div>
-										</div>
-										<strong class="total">Total: 149.00 AED</strong>
-                                          <div class="btn-holder">
-														<a href="#"><span class="span1"><span class="span2">View Cart</span></span></a>
-														<a href="#">Checkout</a>
-										</div>
-						</div>-->
-				</div>
-	<div class="store-language-container">
-	<?php //echo $this->getChildHtml('store_language') ?>
 	</div>
-<?php echo $this->getChildHtml('topLinks') ?>
-
-				<div class="bottom-area">
-						<!-- <a class="headerLogin" data-target=".bs-example-modal-md" data-toggle="modal" href="#">sub</a> -->
-						<?php echo $this->getChildHtml('currency_switcher') ?>
-						<?php $islogedin = Mage::getSingleton('customer/session')->isLoggedIn() ?>
-						<?php if (!$islogedin): ?>
-							 <a class="headerLogin ajaxlogin-login" href="<?php echo Mage::getBaseUrl(); ?>customer/account/login/">LOGIN</a>
-
-<!--               <a class="headerLogin ajaxlogin-login" href="<?php echo Mage::getBaseUrl(); ?>customer/account/login/">LOGIN</a>
--->            <?php else: ?>
-								<div class="open-close login-area">
-										<!--<a href="#" class="opener"  data-target=".bs-example-modal-md" data-toggle="modal"> NL </a>-->
-
-										<a href="#" class="opener">
-												<?php
-												$session = Mage::getSingleton('customer/session');
-												if ($session->isLoggedIn()) {
-														$customer = $session->getCustomer();
-														echo $customer->getName();
-												}
-												?>
-										</a>
-												<?php echo $this->getChildHtml('topLinks') ?>
-
-										<!--<ul class="slide js-slide-hidden">
-		 
-												<li><a href="#">My account</a></li>
-												<li><a href="#">Wishlist</a></li>
-												<li><a href="#">Checkout</a></li>
-												<li><a href="#">Logout</a></li>
-										</ul>-->
-								</div>
-<?php endif ?>
-						<!--  <form class="search-form" action="#">
-									<input type="text" placeholder="">
-									<input type="submit" value="submit">
-							</form>-->
-<?php echo $this->getChildHtml('topSearch') ?>
+	<div class="col right-area col-lg-4 col-md-4 col-sm-3 col-xs-3">
+		<div id="open-close-minicart" class="cart">
+			<a href="javascript:void(0)" class="opener"><span class="count">
+				<?php
+				$_cartQty = Mage::getSingleton('checkout/cart')->getItemsCount();
+				echo $_cartQty;
+				?>
+			</span>My Cart</a>
+			<?php echo $this->getChildHtml('minicart_head'); ?>
+			<!--<div class="slide js-slide-hidden">
+				<div class="product">
+					<a href="#" class="alignleft"><img alt="" src="images/img02.jpg"></a>
+					<div class="text-area">
+						<h2><a href="#">Velour Blazer With Faux Leather</a></h2>
+						<span class="price">$149.00</span>
+						<a class="cancel" href="#"><i class="icon-cancel"></i></a>
+						<a class="edit" href="#"><i class="icon-edit"></i></a>
+					</div>
 				</div>
+				<div class="product">
+					<a href="#" class="alignleft"><img alt="" src="images/img03.jpg"></a>
+					<div class="text-area">
+						<h2><a href="#">Velour Blazer With Faux Leather</a></h2>
+						<span class="price">$149.00</span>
+						<a class="cancel" href="#"><i class="icon-cancel"></i></a>
+						<a class="edit" href="#"><i class="icon-edit"></i></a>
+					</div>
+				</div>
+				<strong class="total">Total: 149.00 AED</strong>
+				<div class="btn-holder">
+					<a href="#"><span class="span1"><span class="span2">View Cart</span></span></a>
+					<a href="#">Checkout</a>
+				</div>
+			</div>-->
 		</div>
+		<div class="store-language-container">
+			<?php //echo $this->getChildHtml('store_language') ?>
+		</div>
+		<?php echo $this->getChildHtml('topLinks') ?>
+		<div class="bottom-area">
+			<!-- <a class="headerLogin" data-target=".bs-example-modal-md" data-toggle="modal" href="#">sub</a> -->
+			<?php echo $this->getChildHtml('currency_switcher') ?>
+			<?php $islogedin = Mage::getSingleton('customer/session')->isLoggedIn() ?>
+			<?php if (!$islogedin): ?>
+			<a class="headerLogin ajaxlogin-login" href="<?php echo Mage::getBaseUrl(); ?>customer/account/login/">LOGIN</a>
+			<!--               <a class="headerLogin ajaxlogin-login" href="<?php echo Mage::getBaseUrl(); ?>customer/account/login/">LOGIN</a>
+			-->            <?php else: ?>
+			<div class="open-close login-area">
+				<!--<a href="#" class="opener"  data-target=".bs-example-modal-md" data-toggle="modal"> NL </a>-->
+				<a href="#" class="opener">
+					<?php
+					$session = Mage::getSingleton('customer/session');
+					if ($session->isLoggedIn()) {
+					$customer = $session->getCustomer();
+					echo $customer->getName();
+					}
+					?>
+				</a>
+				<?php echo $this->getChildHtml('topLinks') ?>
+				<!--<ul class="slide js-slide-hidden">
+					<li><a href="#">My account</a></li>
+					<li><a href="#">Wishlist</a></li>
+					<li><a href="#">Checkout</a></li>
+					<li><a href="#">Logout</a></li>
+				</ul>-->
+			</div>
+			<?php endif ?>
+			<!--  <form class="search-form" action="#">
+				<input type="text" placeholder="">
+				<input type="submit" value="submit">
+			</form>-->
+			<?php echo $this->getChildHtml('topSearch') ?>
+		</div>
+	</div>
 </header>
 
+<?php /* ?>
 <div class="header-language-background">
 	<div class="header-language-container">
-	<div class="store-language-container">
-	<?php //echo $this->getChildHtml('store_language') ?>
-	</div>
-<?php
-/* ?>
-	<?php echo $this->getChildHtml('currency_switcher') ?>
+		<div class="store-language-container">
+		<?php echo $this->getChildHtml('store_language') ?>
+		</div>
 
+	<?php echo $this->getChildHtml('currency_switcher'); ?>
 	<p class="welcome-msg"><?php echo $this->getChildHtml('welcome') ?> <?php echo $this->getAdditionalHtml() ?></p>
 	</div>
-	</div>
+</div>
 
-	<header id="header" class="page-header">
+<header id="header" class="page-header">
 	<div class="page-header-container">
-	<a class="logo" href="<?php echo $this->getUrl('') ?>">
-	<img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" class="large" />
-	<img src="<?php echo $this->getLogoSrcSmall() ?>" alt="<?php echo $this->getLogoAlt() ?>" class="small" />
-	</a>
-
-	<?php // In order for the language switcher to display next to logo on smaller viewports, it will be moved here.
-	// See app.js for details ?>
-	<div class="store-language-container"></div>
-
-	<!-- Skip Links -->
-
-	<div class="skip-links">
-	<a href="#header-nav" class="skip-link skip-nav">
-	<span class="icon"></span>
-	<span class="label"><?php echo $this->__('Menu'); ?></span>
-	</a>
-
-	<a href="#header-search" class="skip-link skip-search">
-	<span class="icon"></span>
-	<span class="label"><?php echo $this->__('Search'); ?></span>
-	</a>
-
-	<div class="account-cart-wrapper">
-	<a href="<?php echo $this->helper('customer')->getAccountUrl(); ?>" data-target-element="#header-account" class="skip-link skip-account">
-	<span class="icon"></span>
-	<span class="label"><?php echo $this->__('Account'); ?></span>
-	</a>
-
-	<!-- Cart -->
-
-	<div class="header-minicart">
-	<?php echo $this->getChildHtml('minicart_head'); ?>
+		<a class="logo" href="<?php echo $this->getUrl('') ?>">
+			<img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" class="large" />
+			<img src="<?php echo $this->getLogoSrcSmall() ?>" alt="<?php echo $this->getLogoAlt() ?>" class="small" />
+		</a>
+		<?php // In order for the language switcher to display next to logo on smaller viewports, it will be moved here.
+		// See app.js for details ?>
+		<div class="store-language-container"></div>
+		<!-- Skip Links -->
+		<div class="skip-links">
+			<a href="#header-nav" class="skip-link skip-nav">
+				<span class="icon"></span>
+				<span class="label"><?php echo $this->__('Menu'); ?></span>
+			</a>
+			<a href="#header-search" class="skip-link skip-search">
+				<span class="icon"></span>
+				<span class="label"><?php echo $this->__('Search'); ?></span>
+			</a>
+			<div class="account-cart-wrapper">
+				<a href="<?php echo $this->helper('customer')->getAccountUrl(); ?>" data-target-element="#header-account" class="skip-link skip-account">
+					<span class="icon"></span>
+					<span class="label"><?php echo $this->__('Account'); ?></span>
+				</a>
+				<!-- Cart -->
+				<div class="header-minicart">
+					<?php echo $this->getChildHtml('minicart_head'); ?>
+				</div>
+			</div>
+		</div>
+		<!-- Navigation -->
+		<div id="header-nav" class="skip-content">
+			<?php echo $this->getChildHtml('topMenu') ?>
+		</div>
+		<!-- Search -->
+		<div id="header-search" class="skip-content">
+			<?php echo $this->getChildHtml('topSearch') ?>
+		</div>
+		<!-- Account -->
+		<div id="header-account" class="skip-content">
+			<?php echo $this->getChildHtml('topLinks') ?>
+		</div>
 	</div>
-	</div>
-
-
-	</div>
-
-	<!-- Navigation -->
-
-	<div id="header-nav" class="skip-content">
-	<?php echo $this->getChildHtml('topMenu') ?>
-	</div>
-
-	<!-- Search -->
-
-	<div id="header-search" class="skip-content">
-	<?php echo $this->getChildHtml('topSearch') ?>
-	</div>
-
-	<!-- Account -->
-
-	<div id="header-account" class="skip-content">
-	<?php echo $this->getChildHtml('topLinks') ?>
-	</div>
-	</div>
-	</header>
-
-
-	<?php echo $this->getChildHtml('topContainer'); ?><?php */?>
+</header>
+<?php */ ?>
+<?php echo $this->getChildHtml('topContainer'); ?>
