back button removed only on men.phtml

--- a/app/design/frontend/creo/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/men.phtml
@@ -33,6 +33,7 @@
 ?>
 <?php
 $_attrbiuteCollection = $this->getLoadedAttributeCollection();
+//echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
 ?>
 <div class="cate-drop-holder">
 <span class="search-by">Search By Design</span>
