--- a/app/design/frontend/creo/default/template/extensions/collections/women.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/women.phtml
@@ -31,6 +31,7 @@
  * @see Mage_Catalog_Block_Product_List
  */
 ?>
+
 <div class="row">
 <div class="col-xs-12">
 <nav class="breadcrumb1">
@@ -48,7 +49,7 @@ $_attrbiuteCollection = $this->getLoadedAttributeCollection();
 <div class="cate-drop-holder" id="fme_filters_list">
 <?php
 $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
+//echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
 ?>
 <div class="cate-open-close">
 <span class="search-by">Search By Design</span>
