--- a/app/design/frontend/creo_mobile/default/template/catalog/layer/view.phtml
+++ b/app/design/frontend/creo_mobile/default/template/catalog/layer/view.phtml
@@ -24,6 +24,7 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+
 <?php
 /**
  * Category layered navigation
@@ -31,7 +32,7 @@
  * @see Mage_Catalog_Block_Layer_View
  */
 $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-echo Mage::helper('functions/data')->getListingParentLink($currentUrl);
+//echo Mage::helper('functions/data')->getListingParentLink($currentUrl);
 ?>
 <?php if($this->canShowBlock()): ?>
 <?php /*?><div class="block block-layered-nav<?php if (!$this->getLayer()->getState()->getFilters()): ?> block-layered-nav--no-filters<?php endif; ?>">
