--- a/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/collections/men.phtml
@@ -24,6 +24,7 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+
 <div class="row">
 <div class="col-xs-12">
 <nav class="breadcrumb1">
@@ -41,7 +42,7 @@ $_attrbiuteCollection = $this->getLoadedAttributeCollection();
 <div class="category_top_filters cate-links" >
 <?php
 $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
+//echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
 ?>
 <span class="search-by">Search By Design</span>
 <div class="cate-open-close">
