--- a/app/design/frontend/creo_mobile/default/template/extensions/collections/women.phtml
+++ b/app/design/frontend/creo_mobile/default/template/extensions/collections/women.phtml
@@ -24,6 +24,7 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+
 <?php
 /**
  * Attributes And Product list template
@@ -36,7 +37,7 @@ $_attrbiuteCollection = $this->getLoadedAttributeCollection(); ?>
 <div class="category_top_filters cate-links">
 <?php
 $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
+//echo Mage::helper('functions/data')->getCollectionParentLink($currentUrl);
 ?>
 <span class="search-by">Search By Design</span>
 <div class="cate-open-close">
