--- a/app/design/frontend/creo/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/creo/default/template/newsletter/subscribe.phtml
@@ -42,6 +42,7 @@ $check_cookie = Mage::getModel('core/cookie')->get('popup-shown');
 $visitAttempt = $_SERVER['HTTP_REFERER'];
 //if((Mage::getModel('core/cookie')->get('popup-shown')) && ($visitCount=='0') && ($subscriber->subscriber_email=='')) { ?>
 
+<?php /* ?>
 <div class="modal fade bs-example-modal-md modal_newsletter " tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-md">
     <div class="modal-content block-subscribe">
@@ -63,8 +64,29 @@ $visitAttempt = $_SERVER['HTTP_REFERER'];
             </div>
           </div>
         </form>
+<?php */ ?>
 
-        <script type="text/javascript">
+<div class="modal fade bs-example-modal-md modal_newsletter " tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content block-subscribe normal-modal">
+      <div class="modal-body">
+        <img src="<?php echo $this->getSkinUrl('/images/get-hooked-up-text.png') ?>" title="Get Hooked Up" alt="Get Hooked Up" style="max-width:100%;">
+        <p class="big">Subscribe  and  get <big>20%</big>  OFF  on  your  first  purchase</p>
+        <form action="<?php echo $this->getFormActionUrl() ?>" method="post" id="newsletter-validate-detail" class="subscribe-form">
+          <div class="block-content">
+            <div class="input-box">
+              <input required="required" type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?php echo $this->__('Sign up for our newsletter') ?>" placeholder="Email " class="input-text required-entry validate-email email"  />
+            </div>
+            <div class="actions">
+              <button type="submit" title="<?php echo $this->__('GET MY 20% OFF NOW') ?>" class="button newslettersubscribe off"><span><span><?php echo $this->__('GET MY 20% OFF NOW') ?></span></span></button>
+            </div>
+            <div class="dontshowagain" onclick="checkcookie()">
+              <input type="checkbox" value="" name="checkbox1" id="checkbox1">
+              <label for="checkbox1">Don’t show this popup again</label>
+            </div>
+          </div>
+        </form>
+    <script type="text/javascript">
     //<![CDATA[
         var newsletterSubscriberFormDetail = new VarienForm('newsletter-validate-detail');
     //]]>
@@ -79,6 +101,7 @@ $visitAttempt = $_SERVER['HTTP_REFERER'];
     </style>
     <?php */ ?>
       </div>
+    <button type="button" class="close closebtn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">SKIP</span></button>
     </div>
   </div>
 </div>
@@ -95,8 +118,7 @@ $visitAttempt = $_SERVER['HTTP_REFERER'];
             </div>
             <input type="submit" value="JOIN" class="button newslettersubscribe ">
           </div>
-          
-          
+
         </form>
         <script type="text/javascript">
     //<![CDATA[
