--- a/app/locale/en_US/template/email/newsletter_subscr_success.html
+++ b/app/locale/en_US/template/email/newsletter_subscr_success.html
@@ -31,13 +31,9 @@
          <tr class="section1">
          <td>
                <h1 style="font-weight: normal;font-size:22px;">YOU GOT CREO...</h1>
-<<<<<<< HEAD
-               <p style="font-family: 'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px;  margin-bottom: 20px;"> Hi <span> "{{htmlescape var=$order.getCustomerName()}}" </span></p>
-=======
                <p style="font-family: 'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px;  margin-bottom: 20px;">Hi</p>
->>>>>>> hotfix-newslatter
-               <p  style=" font-family: 'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px;  margin-bottom: 20px;">Thank you for subscribing with creoroom.com. Here is your 20% off coupon code</p>
-               <p style=" font-family: 'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px;"><a href="" style="text-align: center; display: block; background-color: #e1e1e1; font-family: 'Roboto Condensed', sans-serif;font-size: 18px; font-weight: normal; line-height: 30px; color: #000; margin: 25px 0; padding: 10px 0;">COUPON CODE: {{block type="cms/block" block_id="coupon-code"}}</a></p>
+               <p style=" font-family:'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px;  margin-bottom: 20px;">Thank you for subscribing with creoroom.com. Here is your 20% off coupon code</p>
+               <p style=" font-family: 'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px;"><span style="text-align: center; display: block; background-color: #e1e1e1; font-family: 'Roboto Condensed', sans-serif;font-size: 18px; font-weight: normal; line-height: 30px; color: #000; margin: 25px 0; padding: 10px 0;">COUPON CODE: {{block type="cms/block" block_id="coupon-code"}}</span></p>
                <p style="font-family: 'Roboto Condensed', sans-serif;font-size: 16px;font-weight: 100;margin: 0;padding: 0;line-height: 30px; margin-top:30px;">Our team is here for you. If you need any kind of assistance, we’re here to help. Drop us a line at  <span style="color: rgb(241, 107, 122);"> {{config path="trans_email/ident_general/email"}} </span> or give our customer care a call on <span style="color: rgb(241, 107, 122);"> {{var store_phone}} (International).</span>
                </p>
                <h3 style="text-transform: uppercase; font-family: 'Roboto Condensed', sans-serif; color: rgb(241, 107, 122); font-size: 14px; margin-bottom: 0;">-be you-</h3>
